completed all the files images and links.

--- a/practical-3.html
+++ b/practical-3.html
@@ -6,8 +6,8 @@
     <title>Practical-3</title>
 </head>
 <body>
-    <p style="color:red;font-size: 120%;" ><strong>Practical-3: Create a web page showing a basic html structure using charcter Entities and Span tag.</strong>
-    </p>
+    <h3 style="color:red;font-size: 120%;" ><strong>Practical-3: Create a web page showing a basic html structure using charcter Entities and Span tag.</strong>
+    </h3>
     <h2>Output</h2>
     <pre>
     &lt;!DOCTYPE <span style="color: red;">html</span>&gt;
