--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practical-4</title>
+    <title>Index</title>
 </head>
 <body>
     <h3 style="color: red;">Create a website having list of all practicals and their individual practical page</h3>
@@ -12,10 +12,10 @@
     <h2>About course</h2>
     <p>Front-end web development is everything involved in programming the user interface of a web application. It refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of wen site production as opposed to the database or server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive Html5 websites designed to be accessed via various different browsers, devices and screen sizes.</p>
     <h1 style="color: green;">List of Practicals</h1>
-    <p>1. Practical-1: Create a web page including HTML basic skeleton using Offline Html Editor and Online Sandbox Environment</p>
-    <p>2. Practical-2: Live your first Web-Page on Git-Hub</p>
-    <p>3. Practical-3: Create a web page showing a basic html structure using charcter Entities and Span tag.</p>
-    <p>4. Create a website having list of all practicals and their individual practical page</p>
+    <p>1. Practical-1: Create a web page including HTML basic skeleton using Offline Html Editor and Online Sandbox Environment</p><a href="file:///C:/Users/Lenovo/Desktop/Assignments_lab/practical-4/practical-4/practical-1.html">Practical-1</a>
+    <p>2. Practical-2: Live your first Web-Page on Git-Hub</p><a href="file:///C:/Users/Lenovo/Desktop/Assignments_lab/practical-4/practical-4/practical-2.html">Practical-2</a>
+    <p>3. Practical-3: Create a web page showing a basic html structure using charcter Entities and Span tag.</p><a href="file:///C:/Users/Lenovo/Desktop/Assignments_lab/practical-4/practical-4/practical-3.html">Practical-3</a>
+    <p>4. Create a website having list of all practicals and their individual practical page</p><a href="file:///C:/Users/Lenovo/Desktop/Assignments_lab/practical-4/practical-4/practical-4.html">practical-4</a>
 
 </body>
 </html>
